--- a/Day14/mysite/MyApp/search_from.html
+++ b/Day14/mysite/MyApp/search_from.html
@@ -9,6 +9,7 @@
     <form action="/search" method="get">
     <input type="text" name="q">
     <input type="submit" value="Search" >
+    <input type = "submit" value= 'Logout' name="Logout">
     </form>
 </body>
 </html>
